--- a/delva-studio/src/app/page.module.css
+++ b/delva-studio/src/app/page.module.css
@@ -36,6 +36,7 @@
 
 .main ol {
   font-family: var(--font-geist-mono);
+  font-family: "Bodoni Moda";
   padding-left: 0;
   margin: 0;
   font-size: 14px;
