--- a/delva-studio/src/index.css
+++ b/delva-studio/src/index.css
@@ -2,11 +2,23 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-    margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-        'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-        sans-serif;
+:root {
+    font-synthesis: none;
+    text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+}
+
+body {
+    margin: 0;
+    min-height: 100vh;
+    background-color: #ffffff;
+}
+
+.font-bodoni {
+    font-family: 'Bodoni Moda', serif;
+}
+
+.font-opensans {
+    font-family: 'Open Sans', sans-serif;
 }
